--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,10 @@
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="{{ site.url }}">首页</a></li>
             <li class="dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="web" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Web技术</a>
+              <a class="nav-link dropdown-toggle" href="#" id="web" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">新闻</a>
               <div class="dropdown-menu" aria-labelledby="web">
+                <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">事件</a>
+              <div class="dropdown-menu" aria-labelledby="abc">
                 <a class="dropdown-item" href="{{ site.url }}/ueo/">用户体验优化</a>
               </div>
             </li>
