--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,10 @@
               <div class="dropdown-menu" aria-labelledby="web">
                 <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">事件</a>
               <div class="dropdown-menu" aria-labelledby="abc">
+                <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">吃喝玩乐</a>
+              <div class="dropdown-menu" aria-labelledby="abc">
+                <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">民生</a>
+              <div class="dropdown-menu" aria-labelledby="abc">
                 <a class="dropdown-item" href="{{ site.url }}/ueo/">用户体验优化</a>
               </div>
             </li>
