--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,11 @@
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="{{ site.url }}">首页</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ site.url }}">新闻</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ site.url }}">事件</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ site.url }}">吃喝玩乐</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ site.url }}">民生</a></li>
             <li class="dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="web" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">新闻</a>
-              <div class="dropdown-menu" aria-labelledby="web">
-                <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">事件</a>
-              <div class="dropdown-menu" aria-labelledby="abc">
-                <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">吃喝玩乐</a>
-              <div class="dropdown-menu" aria-labelledby="abc">
-                <a class="nav-link dropdown-toggle" href="#" id="abc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">民生</a>
-              <div class="dropdown-menu" aria-labelledby="abc">
                 <a class="dropdown-item" href="{{ site.url }}/ueo/">用户体验优化</a>
               </div>
             </li>
