--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <li class="nav-item"><a class="nav-link" href="{{ site.url }}">事件</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ site.url }}">吃喝玩乐</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ site.url }}">民生</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ site.url }}">关于我</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ site.url }}/about/">关于我</a></li>
             <li class="dropdown">
                 <a class="dropdown-item" href="{{ site.url }}/ueo/">用户体验优化</a>
               </div>
